# blatex

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  setup.py  shell.nix  templates
.github/workflows/: check.yml
.hooks/: pre-commit  pre-push
find_package_names/: find_packages.py  json_to_database.py  packages.json
man/: blatex.1
scripts/find_package_names/: common_texlive_packages.txt  json_to_database.py
scripts/find_packages_manually/: add_readme_data.py  dnf_packages.txt  find_packages.py  json_to_database.py  notes.md
scripts/package_database_from_web/: download_database.py
src/: blatex.py  clean.rs  cli.rs  compile.rs  config.rs  init.rs  log.rs  main.rs  opts.rs  templates.rs  tests.rs  utils.rs
src/blatex/: __init__.py  log_parser.py  packages.py
src/blatex/resources/: config.json  default-global-config.json  default-local-config.json
tests/: main1.tex
tmp/: main.fdb_latexmk  main.fls  main.tex
