[package]
name = "blatex"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
directories = "5.0.1"
fuzzy_finder = "0.3.2"
serde = { version = "1.0.189", features = ["derive"] }
serial_test = "2.0.0"
termion = "2.0.1"
texlog = { git = "https://github.com/BalderHolst/texlog" }
toml = "0.8.2"
zip = "0.6.6"
zip-extensions = "0.6.2"
